
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.4-pl
====================================
- Fixed issue where cancel button did not work on Resources after save
- Fixed issue with URL TV Output Render and empty input values
- Fixed issues with checkboxes/radios in TVs and widths when hidden
- Fixed various issues with thumbnails in MODx.Browser and return paths in separate contexts
- Added toggle setting for drag/drop in Resource and Element trees
- [#MODX-2346] Allow login/logout processors to handle multiple contexts
- [#MODX-2405] Fixed issue with border on portal panels in mgr home screen
- Fixed issue with TV output render that stripped whitespace in delimiter
- Fixed hanging save issue that occurred when HTML was in pagetitle/longtitle in a Resource
- Fixed issue where TV values were being erased when a TV was hidden via Form Customization
- Updated reference to help in Form Customization page
- Fixed trivial issues with widths in richtext tvs
- [#MODX-2415] Added fix to prevent adding of orm tree attributes with the same key on the same level
- Added resourcelist TV input type for easier listing of resources in a tv input
- Updated ExtJS to 3.3.0
- [#MODX-2378] Fixed issue where action toolbar was on left in IE7
- [#MODX-2408] Fixed issue where sorting was not available for description field on search page
- Fixed issue where modx->resource was not available to TV input option values or default values in mgr
- [#MODX-2410] Fixed issue with urlencoded context key on context edit page
- [#MODX-2407] Fixed issue where user settings were not respected in connectors in mgr
- [#MODX-2279] Fix bad AJAX response if database does not exist or can't be created during setup
- [#MODX-2404] Fixed issue with auto_menuindex and multiple contexts